--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
     />
   </head>
   <body class="bg-[#f5fff6]">
-    <!-- Header Section -->
-    <header class="bg-white px-10 py-4 flex justify-between items-center">
+    <!-- Navbar Section -->
+    <header
+      class="bg-white px-10 py-4 flex flex-col sm:flex-row gap-4 justify-between items-center"
+    >
       <section class="flex justify-center items-center gap-2">
         <figure>
           <img class="w-12" src="./assets/logo.png" alt="" srcset="" />
@@ -74,9 +76,25 @@
       </section>
     </header>
     <main>
-      <!-- Banner Section -->
-      <section>
-        
+      <!-- Hero Section -->
+      <section
+        class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center px-10 py-4 space-y-2"
+      >
+        <figure>
+          <img
+            class="w-20 mx-auto"
+            src="./assets/logo-dark.png"
+            alt=""
+            srcset=""
+          />
+        </figure>
+        <h1 class="text-white text-3xl font-bold">
+          Emergency Service Directory
+        </h1>
+        <p class="text-white text-base font-semibold">
+          Government Emergency Services at Your Fingertip – A Project by
+          Government of the People’s Republic of Bangladesh
+        </p>
       </section>
     </main>
   </body>
