--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
         <section class="font-inter space-x-4">
           <button class="btn bg-[#41ff6b1a] px-6 py-2 rounded-3xl">
-            <span class="font-black text-sm">0</span>
+            <span id="like-count" class="font-black text-sm">0</span>
             <img class="w-5" src="./assets/heart.png" alt="" srcset="" />
           </button>
           <button class="btn bg-[#41ff6b1a] px-6 py-2 rounded-3xl">
@@ -104,6 +104,7 @@
       >
         <!-- Card Section -->
         <section
+          id="card-container"
           class="order-2 sm:col-span-4 xl:col-span-9 grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-3 xl:order-1"
         >
           <div class="card bg-white p-6 shadow-sm grid gap-5">
@@ -115,7 +116,7 @@
                   alt="National Emergency"
                 />
               </figure>
-              <i class="fa-regular fa-heart"></i>
+              <i class="like-btn fa-regular fa-heart"></i>
             </div>
             <div>
               <p class="font-bold">National Emergency Number</p>
@@ -123,15 +124,21 @@
             </div>
             <div>
               <p class="text-xl font-bold">999</p>
-              <p class="bg-[#fafafa] text-sm px-2 py-1 inline rounded-xl">
+              <p
+                class="bg-[#f2f2f2] text-gray-500 text-sm px-2 py-1 inline rounded-xl"
+              >
                 All
               </p>
             </div>
             <div class="flex gap-2">
-              <button class="btn w-1/2 border rounded-lg">
+              <button
+                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+              >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
-              <button class="btn w-1/2 text-white bg-[#00a63e] rounded-lg">
+              <button
+                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+              >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
             </div>
@@ -141,7 +148,7 @@
               <figure class="w-10 h-10 bg-[#DFEFFF] rounded-xl">
                 <img class="w-6" src="./assets/police.png" alt="Police" />
               </figure>
-              <i class="fa-regular fa-heart"></i>
+              <i class="like-btn fa-regular fa-heart"></i>
             </div>
             <div>
               <p class="font-bold">Police Helpline Number</p>
@@ -149,15 +156,21 @@
             </div>
             <div>
               <p class="text-xl font-bold">999</p>
-              <p class="bg-[#fafafa] text-sm px-2 py-1 inline rounded-xl">
+              <p
+                class="bg-[#f2f2f2] text-gray-500 text-sm px-2 py-1 inline rounded-xl"
+              >
                 Police
               </p>
             </div>
             <div class="flex gap-2">
-              <button class="btn w-1/2 border rounded-lg">
+              <button
+                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+              >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
-              <button class="btn w-1/2 text-white bg-[#00a63e] rounded-lg">
+              <button
+                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+              >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
             </div>
@@ -171,7 +184,7 @@
                   alt="Fire Service"
                 />
               </figure>
-              <i class="fa-regular fa-heart"></i>
+              <i class="like-btn fa-regular fa-heart"></i>
             </div>
             <div>
               <p class="font-bold">Fire Service Number</p>
@@ -179,15 +192,21 @@
             </div>
             <div>
               <p class="text-xl font-bold">999</p>
-              <p class="bg-[#fafafa] text-sm px-2 py-1 inline rounded-xl">
+              <p
+                class="bg-[#f2f2f2] text-gray-500 text-sm px-2 py-1 inline rounded-xl"
+              >
                 Fire
               </p>
             </div>
             <div class="flex gap-2">
-              <button class="btn w-1/2 py-0 border rounded-lg">
+              <button
+                class="btn w-1/2 py-0 border rounded-lg hover:bg-black hover:text-white"
+              >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
-              <button class="btn w-1/2 text-white bg-[#00a63e] rounded-lg">
+              <button
+                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+              >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
             </div>
@@ -197,7 +216,7 @@
               <figure class="w-10 h-10 bg-[#ffe3e2] rounded-xl">
                 <img class="w-6" src="./assets/ambulance.png" alt="Ambulance" />
               </figure>
-              <i class="fa-regular fa-heart"></i>
+              <i class="like-btn fa-regular fa-heart"></i>
             </div>
             <div>
               <p class="font-bold">Ambulance Service</p>
@@ -205,15 +224,21 @@
             </div>
             <div>
               <p class="text-xl font-bold">1994-999999</p>
-              <p class="bg-[#fafafa] text-sm px-2 py-1 inline rounded-xl">
+              <p
+                class="bg-[#f2f2f2] text-gray-500 text-sm px-2 py-1 inline rounded-xl"
+              >
                 Health
               </p>
             </div>
             <div class="flex gap-2">
-              <button class="btn w-1/2 border rounded-lg">
+              <button
+                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+              >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
-              <button class="btn w-1/2 text-white bg-[#00a63e] rounded-lg">
+              <button
+                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+              >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
             </div>
@@ -227,7 +252,7 @@
                   alt="Women & Child Helpline"
                 />
               </figure>
-              <i class="fa-regular fa-heart"></i>
+              <i class="like-btn fa-regular fa-heart"></i>
             </div>
             <div>
               <p class="font-bold">Women & Child Helpline</p>
@@ -235,15 +260,21 @@
             </div>
             <div>
               <p class="text-xl font-bold">109</p>
-              <p class="bg-[#fafafa] text-sm px-2 py-1 inline rounded-xl">
+              <p
+                class="bg-[#f2f2f2] text-gray-500 text-sm px-2 py-1 inline rounded-xl"
+              >
                 Help
               </p>
             </div>
             <div class="flex gap-2">
-              <button class="btn w-1/2 border rounded-lg">
+              <button
+                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+              >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
-              <button class="btn w-1/2 text-white bg-[#00a63e] rounded-lg">
+              <button
+                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+              >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
             </div>
@@ -257,7 +288,7 @@
                   alt="Anti-Corruption"
                 />
               </figure>
-              <i class="fa-regular fa-heart"></i>
+              <i class="like-btn fa-regular fa-heart"></i>
             </div>
             <div>
               <p class="font-bold">Anti-Corruption Helpline</p>
@@ -265,15 +296,21 @@
             </div>
             <div>
               <p class="text-xl font-bold">106</p>
-              <p class="bg-[#fafafa] text-sm px-2 py-1 inline rounded-xl">
+              <p
+                class="bg-[#f2f2f2] text-gray-500 text-sm px-2 py-1 inline rounded-xl"
+              >
                 Govt.
               </p>
             </div>
             <div class="flex gap-2">
-              <button class="btn w-1/2 border rounded-lg">
+              <button
+                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+              >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
-              <button class="btn w-1/2 text-white bg-[#00a63e] rounded-lg">
+              <button
+                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+              >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
             </div>
@@ -287,7 +324,7 @@
                   alt="Electricity"
                 />
               </figure>
-              <i class="fa-regular fa-heart"></i>
+              <i class="like-btn fa-regular fa-heart"></i>
             </div>
             <div>
               <p class="font-bold">Electricity Helpline</p>
@@ -295,15 +332,21 @@
             </div>
             <div>
               <p class="text-xl font-bold">16216</p>
-              <p class="bg-[#fafafa] text-sm px-2 py-1 inline rounded-xl">
+              <p
+                class="bg-[#f2f2f2] text-gray-500 text-sm px-2 py-1 inline rounded-xl"
+              >
                 Electricity
               </p>
             </div>
             <div class="flex gap-2">
-              <button class="btn w-1/2 border rounded-lg">
+              <button
+                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+              >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
-              <button class="btn w-1/2 text-white bg-[#00a63e] rounded-lg">
+              <button
+                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+              >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
             </div>
@@ -313,7 +356,7 @@
               <figure class="w-10 h-10 bg-[#ffe3e2] rounded-xl">
                 <img class="w-6" src="./assets/brac.png" alt="Brac" />
               </figure>
-              <i class="fa-regular fa-heart"></i>
+              <i class="like-btn fa-regular fa-heart"></i>
             </div>
             <div>
               <p class="font-bold">Brac Helpline</p>
@@ -321,15 +364,21 @@
             </div>
             <div>
               <p class="text-xl font-bold">16445</p>
-              <p class="bg-[#fafafa] text-sm px-2 py-1 inline rounded-xl">
+              <p
+                class="bg-[#f2f2f2] text-gray-500 text-sm px-2 py-1 inline rounded-xl"
+              >
                 NGO
               </p>
             </div>
             <div class="flex gap-2">
-              <button class="btn w-1/2 border rounded-lg">
+              <button
+                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+              >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
-              <button class="btn w-1/2 text-white bg-[#00a63e] rounded-lg">
+              <button
+                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+              >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
             </div>
@@ -343,7 +392,7 @@
                   alt="National Emergency"
                 />
               </figure>
-              <i class="fa-regular fa-heart"></i>
+              <i class="like-btn fa-regular fa-heart"></i>
             </div>
             <div>
               <p class="font-bold">Bangladesh Railway Helpline</p>
@@ -351,15 +400,21 @@
             </div>
             <div>
               <p class="text-xl font-bold">163</p>
-              <p class="bg-[#fafafa] text-sm px-2 py-1 inline rounded-xl">
+              <p
+                class="bg-[#f2f2f2] text-gray-500 text-sm px-2 py-1 inline rounded-xl"
+              >
                 Travel
               </p>
             </div>
             <div class="flex gap-2">
-              <button class="btn w-1/2 border rounded-lg">
+              <button
+                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+              >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
-              <button class="btn w-1/2 text-white bg-[#00a63e] rounded-lg">
+              <button
+                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+              >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
             </div>
@@ -385,19 +440,23 @@
             class="space-y-2 grid sm:grid-cols-2 sm:gap-4 sm:space-y-0 xl:grid-cols-1 xl:gap-0 xl:space-y-2"
           >
             <div
-              class="flex justify-between items-center bg-[#fafafa] p-3 rounded-lg"
+              class="flex justify-between items-center bg-[#f2f2f2] p-3 rounded-lg"
             >
               <div>
-                <p class="text-sm font-semibold">Bangladesh Railway Helpline</p>
+                <p class="text-sm font-inter font-semibold">
+                  Bangladesh Railway Helpline
+                </p>
                 <p class="text-sm">999</p>
               </div>
               <div class="text-sm font-medium">11:36:58 AM</div>
             </div>
             <div
-              class="flex justify-between items-center bg-[#fafafa] p-3 rounded-lg"
+              class="flex justify-between items-center bg-[#f2f2f2] p-3 rounded-lg"
             >
               <div>
-                <p class="text-sm font-semibold">Bangladesh Railway Helpline</p>
+                <p class="text-sm font-inter font-semibold">
+                  Bangladesh Railway Helpline
+                </p>
                 <p class="text-sm">999</p>
               </div>
               <div class="text-sm font-medium">11:36:58 AM</div>
@@ -406,5 +465,6 @@
         </aside>
       </section>
     </main>
+    <script src="./index.js"></script>
   </body>
 </html>
