Call Buttons, Copy Buttons & Call History clear button clicking functionality added to the code base

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             <img class="w-5" src="./assets/heart.png" alt="" srcset="" />
           </button>
           <button class="btn bg-[#41ff6b1a] px-6 py-2 rounded-3xl">
-            <span class="font-black text-sm">100</span>
+            <span id="total-coin" class="font-black text-sm">100</span>
             <img class="w-5" src="./assets/coin.png" alt="" srcset="" />
           </button>
           <button
             class="btn text-white bg-[#00a63e] font-medium px-6 py-2 rounded-3xl"
           >
-            <span>2</span> Copy
+            <span id="copy-count">2</span> Copy
           </button>
         </section>
       </nav>
@@ -132,12 +132,12 @@
             </div>
             <div class="flex gap-2">
               <button
-                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
               <button
-                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+                class="call-btn btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -164,12 +164,12 @@
             </div>
             <div class="flex gap-2">
               <button
-                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
               <button
-                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+                class="call-btn btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -200,12 +200,12 @@
             </div>
             <div class="flex gap-2">
               <button
-                class="btn w-1/2 py-0 border rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn w-1/2 py-0 border rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
               <button
-                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+                class="call-btn btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -232,12 +232,12 @@
             </div>
             <div class="flex gap-2">
               <button
-                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
               <button
-                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+                class="call-btn btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -268,12 +268,12 @@
             </div>
             <div class="flex gap-2">
               <button
-                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
               <button
-                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+                class="call-btn btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -304,12 +304,12 @@
             </div>
             <div class="flex gap-2">
               <button
-                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
               <button
-                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+                class="call-btn btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -340,12 +340,12 @@
             </div>
             <div class="flex gap-2">
               <button
-                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
               <button
-                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+                class="call-btn btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -372,12 +372,12 @@
             </div>
             <div class="flex gap-2">
               <button
-                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
               <button
-                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+                class="call-btn btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -408,12 +408,12 @@
             </div>
             <div class="flex gap-2">
               <button
-                class="btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn w-1/2 border rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i> Copy
               </button>
               <button
-                class="btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
+                class="call-btn btn w-1/2 text-white bg-[#00a63e] rounded-lg hover:bg-[#f2f2f2] hover:text-black"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -430,6 +430,7 @@
               <p class="text-sm placeholder:font-semibold">Call History</p>
             </section>
             <button
+              id="clear-btn"
               class="btn text-sm text-white bg-[#00a63e] font-medium px-6 py-2 rounded-3xl"
             >
               Clear
@@ -438,30 +439,7 @@
           <div
             id="call-history-container"
             class="space-y-2 grid sm:grid-cols-2 sm:gap-4 sm:space-y-0 xl:grid-cols-1 xl:gap-0 xl:space-y-2"
-          >
-            <div
-              class="flex justify-between items-center bg-[#f2f2f2] p-3 rounded-lg"
-            >
-              <div>
-                <p class="text-sm font-inter font-semibold">
-                  Bangladesh Railway Helpline
-                </p>
-                <p class="text-sm">999</p>
-              </div>
-              <div class="text-sm font-medium">11:36:58 AM</div>
-            </div>
-            <div
-              class="flex justify-between items-center bg-[#f2f2f2] p-3 rounded-lg"
-            >
-              <div>
-                <p class="text-sm font-inter font-semibold">
-                  Bangladesh Railway Helpline
-                </p>
-                <p class="text-sm">999</p>
-              </div>
-              <div class="text-sm font-medium">11:36:58 AM</div>
-            </div>
-          </div>
+          ></div>
         </aside>
       </section>
     </main>
